# brush

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_MCP_TRUNK.md  Trunk.toml  analyze_logs.js  brush_blueprint.rbl  build_with_timestamp.sh  debug.html  debug_launcher.sh  deny.toml  dist-workspace.toml  mcp_log.txt  package.json  setup-dev-tools.sh  trunk_log.txt
.cargo/: config.toml
.cursor/: mcp.json  settings.json
.cursor/rules/: ai_lessons_learned.md  brush_coding_guide.mdc  brush_debug.mdc  brush_dev_workflow.mdc  brush_development.mdc  brush_docs.mdc  brush_lessons.mdc  brush_mcp_usage.mdc  brush_project.mdc  brush_technical.mdc  brush_ui.mdc  build_process.mdc  core_rules.mdc  cursor-rules.mdc  debugging_workflow.mdc  dev-environment.mdc  developer_preferences.mdc  documentation.mdc  git-workflow.mdc  infrastructure-dev.mdc  reconstruction-dev.mdc  recordlessonslearned.mdc  ryan_workflow.mdc  seahorse-ai-ryan_preferences.mdc  technical_patterns.mdc  (+4 more)
.zed/: tasks.json
crates/brush-app/: Cargo.toml  build.rs  index.html
crates/brush-app/src/: app.rs  camera_controls.rs  channel.rs  data_source.rs  export_service.rs  lib.rs  orbit_controls.rs  rerun_tools.rs  running_process.rs  train_loop.rs  utils.rs
crates/brush-app/src/overlays/: controls_detail.rs  dataset_detail.rs  mod.rs  settings_detail.rs  stats_detail.rs
crates/brush-app/src/panels/: datasets.rs  load_data.rs  mod.rs  presets.rs  rerun.rs  scene.rs  settings.rs  stats.rs  tracing_debug.rs
crates/brush-app/src/process_loop/: mod.rs  process.rs  process_args.rs  train_stream.rs
crates/brush-bench-test/: Cargo.toml
crates/brush-bench-test/src/: lib.rs  reference.rs  render_bench.rs
crates/brush-bench-test/test_cases/: basic_case.safetensors  generate_reference.py  tiny_case.safetensors
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: brush_vfs.rs  lib.rs  parsed_gaussian.rs  quant.rs  scene.rs  scene_loader.rs  splat_export.rs  splat_import.rs
crates/brush-dataset/src/formats/: colmap.rs  mod.rs  nerfstudio.rs
crates/brush-dataset/src/storage/: filesystem.rs  indexed_db.rs  mod.rs
crates/brush-desktop/: Cargo.toml  index.html
crates/brush-desktop/src/: main.rs
crates/brush-eval/: Cargo.toml
crates/brush-eval/src/: lib.rs
crates/brush-process/: Cargo.toml
crates/brush-process/src/: data_source.rs  lib.rs  rerun_tools.rs
crates/brush-process/src/process_loop/: mod.rs  process.rs  process_args.rs  train_stream.rs  view_stream.rs
crates/brush-render/: Cargo.toml  build.rs
crates/brush-render-bwd/: Cargo.toml  build.rs
crates/brush-render-bwd/src/: burn_glue.rs  kernels.rs  lib.rs
crates/brush-render/benches/: render_bench.rs
crates/brush-render/src/: bounding_box.rs  burn_glue.rs  camera.rs  dim_check.rs  gaussian_splats.rs  kernels.rs  lib.rs  render.rs  safetensor_utils.rs  sh.rs
crates/brush-render/src/shaders/: gather_grads.wgsl  helpers.wgsl  map_gaussian_to_intersects.wgsl  project_backwards.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl  rasterize_backwards.wgsl
crates/brush-render/src/tests/: grad.rs  mod.rs  reference.rs  render.rs
crates/brush-render/test_cases/: NerfStudioRefGen.ipynb  README.md  basic_case.safetensors  generate_reference.py  pyproject.toml  tiny_case.safetensors
crates/brush-train/: Cargo.toml
crates/brush-train/src/: adam_scaled.rs  burn_glue.rs  config.rs  eval.rs  image.rs  kernels.rs  lib.rs  multinomial.rs  quat_vec.rs  scene.rs  ssim.rs  stats.rs  stats_kernel.rs  train.rs
crates/brush-train/src/shaders/: gather_grads.wgsl  project_backwards.wgsl  rasterize_backwards.wgsl
crates/brush-train/src/tests/: mod.rs  reference.rs  render_bench.rs  safetensor_utils.rs
crates/brush-train/test_cases/: basic_case.safetensors  bench.py  generate_reference.py  tiny_case.safetensors
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: burn_texture.rs  channel.rs  lib.rs
crates/brush-viewer/: Cargo.toml
crates/brush-viewer/src/: data_source.rs  lib.rs  orbit_controls.rs  train_loop.rs  viewer.rs
crates/brush-viewer/src/panels/: datasets.rs  load_data.rs  mod.rs  presets.rs  rerun.rs  scene.rs  stats.rs  tracing_debug.rs
crates/brush-wgsl/: Cargo.toml
crates/brush-wgsl/src/: lib.rs
crates/rrfd/: Cargo.toml
crates/rrfd/src/: android.rs  lib.rs
docs/: PRD-brush-1.0-usability.md  README.md  ai_agent_lessons_learned.md  ai_agents_vibe_coding.md  ai_assisted_debugging.md  ai_assisted_workflow.md  api-reference.md  architecture.md  benchmarks.md  browser_tools_setup.md  brush_1-0_PRD.md  brush_app_overview.md  brush_lessons.mdc  build_process.md  cli.md  code_from_ai_agents.md  code_structure.md  core_concepts.md  cross_platform_framework.md  dataset_handling.md  debugging-web.md  debugging.md  debugging_profiling.md  development_environment.md  development_workflow.md  documentation_index.md  documentation_plan.md  examples.md  export_service.md  export_service_plan.md  extending_brush.md  file_dialog_implementation_plan.md  getting_started.md  glossary.md  index.md  introduction.md  key_technologies.md  lessons_learned.md  maintenance.md  original_brush_readme.md  (+20 more)
docs-audit/: docs-ai-agent-audit-plan.md  docs-audit-findings-gemini.md  docs-audit-postmortem-gemini.md  docs-post-audit-revisions-plan-gemini.md  phase-2-structure-plan.md  process-notes.md  worklog.md
docs-process/: README.md  authoring-guide.md  process-notes.md  structure-outline.md
examples/: README.md
examples/train-2d/: Cargo.toml  README.md
examples/train-2d/examples/: train-2d.rs
project/: README.md  ai_assisted_development.md  ai_github_workflow_guide.md  android_platform_roadmap.md  brush_core_enhancements_prd.md  brush_development_roadmap.md  brush_enterprise_digital_twin_prd.md  developer_context.md  ios_platform_roadmap.md  macos_platform_roadmap.md  platforms_expansion.md  web_platform_enhancements.md  web_platform_roadmap.md
public/: temp_3d_scene.html
scratchpad/: README.md  docs-audit-findings.md  docs-audit-plan-gemini-max.md  docs-revision-plan.md  documentation_plan.md
(+65 files in other folders)
