[package]
name = "brush-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "brush_app"
path = "src/lib.rs"

[[bin]]
name = "brush_app"
path = "src/bin/bin.rs"

[dependencies]
# Brush deps.
brush-process.path = "../brush-process"
brush-ui.path = "../brush-ui"
brush-render.path = "../brush-render"
brush-dataset.path = "../brush-dataset"
brush-train.path = "../brush-train"

sync-span.path = "../sync-span"
rrfd.path = "../rrfd"

burn-wgpu.workspace = true
burn.workspace = true
burn-jit.workspace = true

glam.workspace = true

egui.workspace = true
egui_tiles.workspace = true
eframe.workspace = true

wgpu.workspace = true

urlencoding.workspace = true
humantime.workspace = true
web-time.workspace = true

log.workspace = true

clap.workspace = true
anyhow.workspace = true

# Default to wayland on linux. Change this to x11 if needed.
# this perhaps could use a feature on our side as well,
# so you could run with cargo run --no-default-features --features=11
winit = { version = "0.30", features = ["default"] }
tokio_with_wasm = { workspace = true, features = ["rt"] }

tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt"] }
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
wasm-logger.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
brush-cli.path = "../brush-cli"
tracing-tracy = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
tracing-wasm.workspace = true
web-sys.workspace = true

[features]
tracy = ["tracing", "dep:tracing-tracy"]
tracing = []

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false

[lints]
workspace = true
