[package]
name = "brush-dataset"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
colmap-reader.path = "../colmap-reader"
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true
glam.workspace = true
burn.workspace = true
tracing.workspace = true
log.workspace = true
ply-rs.workspace = true
rand.workspace = true

tokio = { workspace = true, features = ["io-util"] }
tokio_with_wasm.workspace = true
tokio-stream.workspace = true
async-fn-stream.workspace = true
clap.workspace = true
path-clean = "1.0.1"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = []
web-storage = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures"]

[lints]
workspace = true
