[package]
name = "brush-desktop"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "brush_bin"
path = "src/main.rs"

[dependencies]
egui.workspace = true
eframe.workspace = true
brush-viewer.path = "../brush-viewer"
brush-ui.path = "../brush-ui"
log.workspace = true
tokio_with_wasm = { workspace = true, features = ["rt"] }

# Default to wayland on linux. Change this to x11 if needed.
# this perhaps could use a feature on our side as well,
# so you could run with cargo run --no-default-features --features=11
winit = { version = "0.30", features = ["default"] }

tracing-subscriber.workspace = true
tracing.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
env_logger.workspace = true
tracing-tracy = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["io-util", "rt"] }
tracing-wasm.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true
wasm-logger.workspace = true

[features]
tracy = ["dep:tracing-tracy", "tracing"]
tracing = ["brush-viewer/tracing"]
