[package]
name = "brush-eval"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-dataset.path = "../brush-dataset"
brush-ssim.path = "../brush-ssim"

anyhow.workspace = true
image.workspace = true
glam.workspace = true
burn.workspace = true


[lints]
workspace = true
