[package]
name = "brush-render-bwd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"

burn.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

naga_oil.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
tracing.workspace = true

[build-dependencies]
brush-wgsl.path = "../brush-wgsl"
miette.workspace = true

[lints]
workspace = true
