[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"

anyhow.workspace = true
image.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
log.workspace = true
hashbrown.workspace = true

burn.workspace = true
burn-jit.workspace = true
burn-fusion.workspace = true

clap.workspace = true

[lints]
workspace = true
