[package]
name = "brush-train"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
brush-render.path = "../brush-render"
brush-kernel.path = "../brush-kernel"
assert_approx_eq.workspace = true

anyhow.workspace = true
image.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
log.workspace = true
hashbrown.workspace = true

burn.workspace = true
burn-cubecl.workspace = true
burn-fusion.workspace = true
burn-ir.workspace = true

naga_oil.workspace = true
wgpu.workspace = true
bytemuck.workspace = true

clap.workspace = true

[build-dependencies]
brush-wgsl.path = "../brush-wgsl"
miette.workspace = true

[dev-dependencies]
divan = "0.1.17"
safetensors.workspace = true
brush-rerun.path = "../brush-rerun"
rerun.workspace = true
tokio.workspace = true

[[bench]]
name = "render_bench"
harness = false
path = "src/tests/render_bench.rs"

[lints]
workspace = true
