[package]
name = "brush-ui"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
burn.workspace = true
burn-wgpu.workspace = true
burn-fusion.workspace = true
glam.workspace = true
eframe.workspace = true
egui.workspace = true
wgpu.workspace = true
