[package]
name = "brush-viewer"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
# Brush deps.
brush-render.path = "../brush-render"
brush-train.path = "../brush-train"
brush-dataset.path = "../brush-dataset"
brush-ui.path = "../brush-ui"

# Workspace deps.
glam.workspace = true
burn.workspace = true
burn-wgpu.workspace = true
burn-jit.workspace = true

image.workspace = true
anyhow.workspace = true
eframe.workspace = true
web-sys.workspace = true
egui.workspace = true
egui_tiles.workspace = true
tracing.workspace = true
wgpu.workspace = true
rand.workspace = true

web-time.workspace = true
humantime.workspace = true

log.workspace = true

rrfd.path = "../rrfd"
sync-span.path = "../sync-span"
tracing-subscriber.workspace = true

zip.workspace = true
async-fn-stream.workspace = true

tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-util.workspace = true
tokio-stream.workspace = true

reqwest.workspace = true
urlencoding.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rerun.workspace = true
brush-rerun.path = "../brush-rerun"
tracing-tracy.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tracing-wasm.workspace = true
web-sys.workspace = true

[features]
tracy = []
tracing = []

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
omit-default-module-path = false
