[package]
name = "brush-wgsl"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
naga_oil.workspace = true
naga.workspace = true
anyhow.workspace = true
regex = "1.11.1"
regex-syntax = "0.8.5"
data-encoding = "2.6.0"
thiserror.workspace = true

[lints]
workspace = true
