[package]
name = "rrfd"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
jni = "0.21.1"
lazy_static = "1.5.0"
anyhow.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.15.0", default-features = false, features = [
    "xdg-portal",
    "tokio",
] }

[target.'cfg(target_os = "android")'.dependencies]
tokio = { workspace = true, features = ["fs", "sync"] }

[lints]
workspace = true
